--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,5 +1,3 @@
-TMUX_COLORTAG_TAG_ONLY=yes
-
 unbind C-b
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -7,34 +5,25 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'xamut/tmux-weather'
-set -g @plugin 'xamut/tmux-network-bandwidth'
-#set -g @plugin 'Determinant/tmux-colortag'
-#set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'fcsonline/tmux-thumbs'
 
 set -g mouse on
-
-#set-option -g status-right "#{network_bandwidth} #[bg=green fg=black] #{weather} #[bg=red fg=white] %a "
-set-option -g @tmux-weather-format "%c+%t+%w"
-
-#set -g status-left "♥️     #{prefix_highlight}"
 
 set -g status-keys vi
 bind \\ split-window -h
 bind - split-window -v
 set -g prefix C-z
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
-set -g default-terminal "xterm-256color-italic"
-set-option -ga terminal-overrides ",xterm-256color-italic:Tc"
-#set -g @prefix_highlight_bg '#8be9fd'
-#set -g @prefix_highlight_fg '#282a36'
+set -g default-terminal "xterm-kitty"
+set-option -ga terminal-overrides ",xterm-kitty:Tc"
+set -g status-bg '#21222c'
 
 run-shell "powerline-daemon -q"
-run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
+# run-shell ~/.config/tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
 
 source /usr/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
-
+run '~/.config/tmux/plugins/tpm/tpm'
