Remove ohmyzsh, change tmux xterm-256color, add git signingkey, add diffprog

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -16,8 +16,8 @@ set -g prefix C-z
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
-set -g default-terminal "xterm-kitty"
-set-option -ga terminal-overrides ",xterm-kitty:Tc"
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g status-bg '#21222c'
 
 run-shell "powerline-daemon -q"
