--- a/broot/.config/broot/conf.toml
+++ b/broot/.config/broot/conf.toml
@@ -65,7 +65,7 @@ default_flags = ""
 # As this process is unreliable, you may uncomment this setting
 # and set it to false or true if you notice the colors in
 # previewed images are too off.
-# true_colors = false
+true_colors = true
 
 ###############################################################
 # Verbs and shortcuts
