--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,7 +3,7 @@
   name = Chinmay Dalal
 	signingkey = 2C930DF41C88D2A3
 [core]
-  pager = diff-so-fancy | less --tabs=4 -RFX
+  pager = diff-so-fancy | less --tabs=2 -RFX
 [color]
   ui = true
 [color "diff-highlight"]
@@ -20,3 +20,7 @@
   whitespace = red reverse
 [init]
 	defaultBranch = main
+[merge]
+	tool = vimdiff3
+[mergetool]
+	path = nvim
