--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -231,3 +231,9 @@ bar {
 }
 
 include /etc/sway/config.d/*
+exec swayidle -w \
+  timeout 285 'swaynag -t warning -m "Locking Screen" --background=#e60bdeFF --text=#ffffffFF --font=Source Code Pro \
+  timeout 300 'swaylock -f -c 000000' \
+  timeout 600 'swaymsg "output * dpms off"' \
+       resume 'swaymsg "output * dpms on"' \
+  before-sleep 'swaylock -f -c 000000'
