--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -92,7 +92,8 @@ gaps inner 7
     bindsym $mod+c exec clipman pick -t wofi
 
     # grimshot
-    bindsym Print exec grimshot copy screen
+    bindsym Print exec grimshot save screen
+    bindsym Ctrl+Print exec grimshot save area
 
     # swaylock
     bindsym $mod+Shift+m exec swaylock -i Downloads/pawel-czerwinski-IIHuZa1WirQ-unsplash.jpg --effect-greyscale
