--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -236,7 +236,7 @@ bar {
 
 include /etc/sway/config.d/*
 exec swayidle -w \
-  timeout 285 'swaynag -t warning -m "Locking Screen" --background=#e60bdeFF --text=#ffffffFF --font=Source Code Pro \
+  timeout 285 'swaynag -t warning -m "Locking Screen" --background=#e60bdeFF --text=#ffffffFF --font=Source Code Pro' \
   timeout 300 'swaylock -f -c 000000' \
   timeout 600 'swaymsg "output * dpms off"' \
        resume 'swaymsg "output * dpms on"' \
