--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -15,16 +15,10 @@ bind \\ split-window -h
 bind - split-window -v
 set -g prefix C-z
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
-# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-set -g status-bg '#21222c'
-
-run-shell "powerline-daemon -q"
-# run-shell ~/.config/tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
-
-source /usr/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
+set -s copy-command 'xsel -i'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
