--- a/waybar/.config/waybar/config.json
+++ b/waybar/.config/waybar/config.json
@@ -82,5 +82,8 @@
         },
         "on-click": "pavucontrol"
     },
-    "custom/power":{ "format":"    ", "on-click":"swaynag.sh" },
+    "custom/power": {
+      "format":"",
+      "on-click":"swaynag.sh"
+    },
 }
