less round, tmux statusline

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -10,6 +10,7 @@ set -g @plugin 'schasse/tmux-jump'
 
 set -g mouse on
 
+source ~/.config/tmux/statusline.conf
 set -g status-keys vi
 bind \\ split-window -h
 bind - split-window -v
