--- a/hunter/.config/hunter/config
+++ b/hunter/.config/hunter/config
@@ -1,7 +1,7 @@
 animation=on
 show_hidden=off
-select_cmd=find -type f | fzf -m
-cd_cmd=find -type d | fzf
+select_cmd=sk -m
+cd_cmd=fd --type d | sk
 icons=on
 ratios=20,30,49
 media_autostart=off
