--- a/tmux/.config/tmux/statusline.conf
+++ b/tmux/.config/tmux/statusline.conf
@@ -1,7 +1,7 @@
 #!/usr/bin/env tmux
 
 set -g status-left-length 25
-set -g status-left ' #{s/root//:client_key_table} '
+set -g status-left ' #{USER}@#{host} #{s/root//:client_key_table} '
 
 set -g status-style bg="#000000"
 setw -g window-status-current-style bg="#2a2a2a"
@@ -16,7 +16,8 @@ set -g clock-mode-style 24
 set -g status-right-length 100
 set -g status-right-style fg=black
 set -g status-right-style bold
-set -g status-right '#[fg=#f99157,bg=#2d2d2d] %H:%M |#[fg=#6699cc] %y.%m.%d '
+#set -g status-right '#[fg=#f99157,bg=#2d2d2d] %H:%M |#[fg=#6699cc]%_d %b '
+set -g status-right '#[fg=#f99157,bg=#2d2d2d] %a |#[fg=#6699cc]%_d %b '
 
 set-window-option -g window-status-style bg=default
 set-window-option -g window-status-style fg=white
