--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -17,9 +17,11 @@ bind - split-window -v
 set -g prefix C-z
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-set -s copy-command 'xsel -i'
+set -g default-terminal tmux-256color
+set-option -ga terminal-overrides ",tmux-256color:Tc"
+set -s copy-command 'wl-copy'
+set -g set-clipboard on
+bind -Tcopy-mode C-y send -X copy-pipe "wl-copy >/dev/null"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
