--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -248,5 +248,6 @@ include /etc/sway/config.d/*
 exec swayidle -w \
   timeout 300 'swaylock -f -c 000000' \
   timeout 600 'swaymsg "output * dpms off"' \
+  timeout 900 'systemctl -i suspend' \
        resume 'swaymsg "output * dpms on"' \
   before-sleep 'swaylock -f -c 000000'
