--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -6,10 +6,10 @@ set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'schasse/tmux-jump'
+set -g @plugin 'srcery-colors/srcery-tmux'
 
 set -g mouse on
-
-source ~/.config/tmux/statusline.conf
+set -g @srcery_tmux_patched_font '1'
 set -g status-keys vi
 bind \\ split-window -h
 bind - split-window -v
