--- a/desktop/.config/sway/config
+++ b/desktop/.config/sway/config
@@ -1,6 +1,8 @@
 # Read `man 5 sway` for a complete reference.
 
 exec autotiling
+for_window [title="Firefox — Sharing Indicator"] floating enable
+for_window [title="Firefox — Sharing Indicator"] no_focus
 
 # Colors
 
