--- a/desktop/.config/waybar/config.json
+++ b/desktop/.config/waybar/config.json
@@ -4,8 +4,8 @@
     "height": 25, // Waybar height (to be removed for auto height)
     // "width": 1280, // Waybar width
     // Choose the order of the modules
-    "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
-    "modules-center": ["sway/window"],
+    "modules-left": ["sway/workspaces", "sway/mode","sway/window"],
+    "modules-center": [],
     "modules-right": ["custom/firefox_media", "idle_inhibitor", "pulseaudio", "network", "cpu", "memory", "temperature", "backlight", "sway/language", "clock", "custom/power", "tray"],
 
     // Modules configuration
