--- a/desktop/.config/waybar/config.json
+++ b/desktop/.config/waybar/config.json
@@ -36,8 +36,7 @@
         "return-type": "json",
         "exec": "~/.config/waybar/modules/firefox_media.sh",
         "on-click": "playerctl -p $(playerctl -l | grep firefox) play-pause",
-        "escape": true,
-        "max-length": 30,
+        "escape": true
     },
     "idle_inhibitor": {
         "format": "{icon}",
