--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -10,6 +10,7 @@ set -g @plugin 'srcery-colors/srcery-tmux'
 
 set -g mouse on
 set -g @srcery_tmux_patched_font '1'
+set -g @thumbs-command 'wl-copy'
 set -g status-keys vi
 bind \\ split-window -h
 bind - split-window -v
@@ -17,9 +18,7 @@ bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 
 set -g default-terminal tmux-256color
 set-option -ga terminal-overrides ",tmux-256color:Tc"
-set -s copy-command 'wl-copy'
-set -g set-clipboard on
-bind -Tcopy-mode C-y send -X copy-pipe "wl-copy >/dev/null"
+set -g @thumbs-command 'echo -n {} | wl-copy'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
