--- a/desktop/.config/sway/config
+++ b/desktop/.config/sway/config
@@ -166,6 +166,7 @@ gaps inner 7
 
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec nwgbar
+    bindsym $mod+y exec nwggrid
 #
 # Moving around:
 #
