major update - mellowplayer, mako actions, qt env

--- a/desktop/.config/sway/config
+++ b/desktop/.config/sway/config
@@ -167,6 +167,7 @@ gaps inner 7
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec nwgbar
     bindsym $mod+y exec nwggrid
+    bindsym $mod+n exec makoctl menu wofi -d -p 'Choose Action: '
 #
 # Moving around:
 #
