change fonts, expressline ts indicator

--- a/desktop/.config/sway/config
+++ b/desktop/.config/sway/config
@@ -3,8 +3,8 @@
 exec autotiling
 exec mkfifo $SWAYSOCK.wob && tail -f $SWAYSOCK.wob | wob --border=0 --background-color=#c01d2021 --bar-color=#80ebdbb2 --padding=2
 exec_always --no-startup-id workstyle &> /tmp/workstyle.log
-for_window [title="Firefox — Sharing Indicator"] floating enable
-for_window [title="Firefox — Sharing Indicator"] no_focus
+for_window [title="Firefox — Sharing Indicator"] floating enable, no_focus
+for_window [title="ptpython"] floating enable, border normal, resize set width 500 px height 500 px
 
 # Colors
 
