fonts, workstyle, declare vim as global in sumneko

--- a/desktop/.config/mako/config
+++ b/desktop/.config/mako/config
@@ -1,4 +1,5 @@
-background-color=#3c3836
+background-color=#282828
 font=Delugia Nerd Font 10
-border-color=#d79921
+text-color=#f8f8f2
+border-color=#d65d0e
 border-radius=3
