--- a/desktop/.config/workstyle/config.toml
+++ b/desktop/.config/workstyle/config.toml
@@ -29,7 +29,6 @@
 "file manager" = ""
 "libreoffice calc" = ""
 "libreoffice writer" = ""
-"nvim" = ""
 "gthumb" = ""
 "image" = ""
 "menu" = ""
@@ -40,3 +39,6 @@
 "music" = ""
 "disk usage" = ""
 ".pdf" = ""
+"thunderbird" = "﫯"
+"mail" = "﫯"
+"nvim" = ""
