ncmpcpp visualiser, both portals work, lambda prompt

--- a/music/.config/mopidy/mopidy.conf
+++ b/music/.config/mopidy/mopidy.conf
@@ -12,6 +12,9 @@
 #config_file =
 
 [audio]
+output = tee name=t ! queue ! autoaudiosink t.
+       ! queue ! audio/x-raw,rate=44100,channels=2,format=S16LE
+       ! udpsink host=localhost port=5555
 #mixer = software
 #mixer_volume =
 #output = autoaudiosink
