--- a/environment/.config/environment.d/sway.conf
+++ b/environment/.config/environment.d/sway.conf
@@ -1,5 +1,9 @@
+XDG_SESSION_TYPE=wayland
 LIBVA_DRIVER_NAME=i965
 MOZ_ENABLE_WAYLAND=1
 KITTY_ENABLE_WAYLAND=1
-XDG_SESSION_TYPE=wayland
-XDG_CURRENT_DESKTOP=sway
+CLUTTER_BACKEND=wayland
+QT_QPA_PLATFORMTHEME=gnome
+QT_QPA_PLATFORM=wayland-egl
+SDL_VIDEODRIVER=wayland
+GDK_BACKEND=wayland
