--- a/desktop/.config/sway/config
+++ b/desktop/.config/sway/config
@@ -5,7 +5,7 @@ exec emacs --daemon
 exec_always --no-startup-id workstyle &> /tmp/workstyle.log
 for_window [title="Firefox — Sharing Indicator"] floating enable, no_focus
 for_window [title="ptpython"] floating enable, border normal, resize set width 500 px height 500 px
-
+exec systemctl --user import-environment XDG_CURRENT_DESKTOP
 font pango:JuliaMono 10
 # Colors
 
