--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ hunter/.config/hunter/~keys
 hunter/.config/hunter/previewers
 tmux/.config/tmux/plugins
 music/.config/mopidy/auth.json
+emacs/.config/doom/mail-ids.el
