--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,10 +3,12 @@ font_family      JetBrains Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-font_size 10.5
+font_size 10.6
 cursor_shape underline
 cursor_underline_thickness 1.5
 enable_audio_bell yes
 url_style single
 allow_remote_control yes
 #background_opacity 0.95
+adjust_line_height  110%
+disable_ligatures cursor
