--- a/music/.config/ncmpcpp/config
+++ b/music/.config/ncmpcpp/config
@@ -1,1 +1,51 @@
 visualizer_data_source = localhost:5555
+visualizer_spectrum_smooth_look = no
+visualizer_type = spectrum
+visualizer_look = ▮▮
+playlist_separate_albums = "no"
+playlist_display_mode = "columns"
+browser_display_mode = "columns"
+volume_change_step = "2"
+progressbar_look = "─•─"
+user_interface = "alternative"
+alternative_header_first_line_format = $b$1$aqqu$/a$9 {%t}|{%f} $1$atqq$/a$9$/b
+alternative_header_second_line_format = {{$4$b%a$/b$9}{ - $7%b$9}{ ($4%y$9)}}|{%D}
+media_library_primary_tag = "artist"
+default_find_mode = "wrapped"
+header_visibility = "yes"
+statusbar_visibility = "yes"
+titles_visibility = "no"
+header_text_scrolling = "yes"
+cyclic_scrolling = "yes"
+ask_before_clearing_playlists = "yes"
+clock_display_seconds = "yes"
+display_volume_level = "yes"
+display_bitrate = "yes"
+display_remaining_time = "yes"
+ignore_leading_the = "no"
+mouse_support = "yes"
+use_console_editor = "yes"
+autocenter_mode = "yes"
+lyrics_fetchers = genius, musixmatch, azlyrics, sing365, metrolyrics, justsomelyrics, jahlyrics, plyrics, tekstowo, zeneszoveg, internet
+
+
+####colors####
+colors_enabled = "yes"
+empty_tag_color = "076"
+header_window_color = "095"
+volume_color = "white"
+state_line_color = "cyan"
+color1 = "076"
+color2 = "076"
+current_item_prefix = "$(green)$r"
+current_item_suffix = "$/r$(end)"
+current_item_inactive_column_prefix = "$(white)$r"
+current_item_inactive_column_suffix = "$/r$(end)"
+main_window_color = "076"
+progressbar_color = "magenta"
+progressbar_elapsed_color = "green"
+statusbar_color = "green"
+alternative_ui_separator_color = "red"
+window_border_color = "green"
+active_window_border = "cyan"
+discard_colors_if_item_is_selected = "no"
