--- a/desktop/.config/mako/config
+++ b/desktop/.config/mako/config
@@ -1,5 +1,5 @@
-background-color=#282828
+background-color=#1e1e1e
 font=JuliaMono 9.8
-text-color=#f8f8f2
-border-color=#d65d0e
+text-color=#D4D4D4
+border-color=#C586C0
 border-radius=3
