--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,21 +4,19 @@
   name = Chinmay Dalal
   signingkey = 2C930DF41C88D2A3
 [core]
-  pager = diff-so-fancy | less --tabs=2 -RFX
+  pager = delta
+[interactive]
+  diffFilter = delta --color-only
+[delta]
+  features = side-by-side line-numbers decorations
+  whitespace-error-style = 22 reverse
+  syntax-theme = OneHalfDark
+[delta "decorations"]
+  commit-decoration-style = bold yellow box ul
+  file-style = bold yellow ul
+  file-decoration-style = none
 [color]
   ui = true
-[color "diff-highlight"]
-  oldNormal = red bold
-  oldHighlight = red bold 52
-  newNormal = green bold
-  newHighlight = green bold 22
-[color "diff"]
-  meta = 11
-  frag = magenta bold
-  commit = yellow bold
-  old = red bold
-  new = green bold
-  whitespace = red reverse
 [init]
   defaultBranch = main
 [merge]
