--- a/desktop/.config/waybar/config.json
+++ b/desktop/.config/waybar/config.json
@@ -102,7 +102,7 @@
         "interval": 3600,                     // every hour
         "exec": "checkupdates | wc -l",       // # of updates
         "exec-if": "exit 0",                  // always run; consider advanced run conditions
-        "on-click": "kitty -e 'paru'; pkill -SIGRTMIN+8 waybar", // update system
+        "on-click": "wezterm start -- paru", // update system
         "signal": 8
     },
     "network": {
