Update before new p10k

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -6,7 +6,9 @@ set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'schasse/tmux-jump'
-set -g @plugin 'srcery-colors/srcery-tmux'
+set -g @plugin 'khang-hoang/tmux-dark-plus-theme'
+
+set -g status-justify centre
 
 set -g mouse on
 set -g @srcery_tmux_patched_font '1'
