[wezterm] fennel claims yet another config

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ tmux/.config/tmux/plugins
 music/.config/mopidy/auth.json
 emacs/.config/doom/mail-ids.el
 emacs/.config/doom/config.el
+wezterm/.config/wezterm/wezterm.lua
