--- a/goneovim/.goneovim/settings.toml
+++ b/goneovim/.goneovim/settings.toml
@@ -22,7 +22,7 @@ Height = 600
 ExtCmdline   = true
 ExtPopupmenu = true
 ExtTabline   = true
-ExtMessages  = false
+ExtMessages  = true
 
 ## Copy yanked text to clipboard
 # Clipboard = false
@@ -49,10 +49,10 @@ DisableImeInNormal = false
 
 ## This option makes the whole GUI window in semi-transparent.
 ## This setting also implicitly enables the Drawborder setting
-Transparent = 0.8
+#Transparent = 0.8
 
 ## Draw borders on the GUI side instead of the vertical border and status line that nvim draws.
-DrawBorder = false
+DrawBorder = true
 
 ## Draw built-in indent guide
 IndentGuide = false
@@ -65,7 +65,7 @@ DrawShadowForFloatWindow = true
 
 ## Enable desktop notification settings for nvim messages.
 ## This option works only if `ExtMessages` is enabled.
-#DesktopNotifications = true
+DesktopNotifications = true
 
 
 # Pattern that fills the diff background
@@ -167,13 +167,13 @@ Visible = true
 ## To view the minimap, launch an additional nvim instance;
 ## setting Disable to true will not launch this additional nvim instance
 ## and will completely disable the minimap feature.
-Disable = false
+#Disable = true
 
 ## Specifies whether to show the minimap or not.
-Visible = true
+#Visible = false
 
 ## Specifies the width of the minimap.
-Width = 120
+#Width = 120
 
 [ScrollBar]
 ## Specifies whether to show the external scrollbar or not.
