--- a/goneovim/.config/goneovim/settings.toml
+++ b/goneovim/.config/goneovim/settings.toml
@@ -1,18 +1,41 @@
-# ~/.goneovim/setting.toml
+## Goneovim settings.toml
+## All of the following commented configuration items have default values.
 
 [Editor]
+## Makes the application window frameless.
+# BorderlessWindow = false
+
 ## Editor minimum window width (>= 400)
 Width = 800
 ## Editor minimum window height (>= 300)
 Height = 600
+## Create a small margin on the left and right sides of the application window.
+# Gap = 2
+
+## This option makes the whole GUI window in semi-transparent.
+## This setting also implicitly enables the Drawborder setting
+# Transparent = 1.0
+
+## Launch goneovim with full screen window size.
+# StartFullscreen = false
 
 ## Editor external font-family, font-size, and linespace.
 ## This is the font and linespace settings of the graphical UI as an nvim front end.
 ## For example, linespace affects the margins of the external completion popup menu UI.
-## Font settings in nvim are set with well-known options, such as `:set guifont = hoge:h10`, `:set linespace=4`.
-# FontFamily = "Monospace"
-# FontSize = 14
-# Linespace = 6
+## Note that the linespace setting must be the same on the Neovim side. The reason for this
+## is that the default value on the Neovim side is 0, which will be overwritten by the Neovim setting.
+## Of course, these settings can also be changed by setting the guifont and linespace on the Neovim side.
+## Fontfamily is
+## In MacOS,
+# FontFamily = "Monaco"
+## In Linux
+FontFamily = "JetBrains Mono Medium"
+## In Windows
+# FontFamily = "Windows"
+## Fontsize is
+FontSize = 11
+## linespace is
+Linespace = 3
 
 ## Neovim external UI features
 ## The following is the default value of goneovim.
@@ -24,41 +47,44 @@ ExtPopupmenu = true
 ExtTabline   = true
 ExtMessages  = true
 
-## Copy yanked text to clipboard
-# Clipboard = false
-
 ## Goneovim has a cached rendering feature enabled to speed up the process.
 ## If you want to disable it, set it to false
 # CachedDrawing = true
 ## You can specify the cache size to be used by the cache rendering feature of goneovim.
-## The default is 320.
-# CacheSize = 320
+## The default is 400.
+# CacheSize = 400
+
+## Disables font ligatures.
+# DisableLigatures = true
+
+## Copy yanked text to clipboard
+Clipboard = true
+
+## This setting is equivalent to Macmeta in MacVim.
+# Macmeta = true
 
 ## The input method editor will be automatically disabled when the mode is changed to normal mode.
-## It may be useful for users who use the input method editor (e.g. East Asian People).
-DisableImeInNormal = false
-
-## You can write a vimscript to be executed after goneovim starts,
-## for example to disable the vimscript that Goneovim has embedded internally.
-# GinitVim = '''
-#  let g:hoge =fuga
-# '''
-
-## Launch goneovim with full screen window size.
-# StartFullscreen = false
-
-## This option makes the whole GUI window in semi-transparent.
-## This setting also implicitly enables the Drawborder setting
-#Transparent = 0.8
+## It may be useful for users who use the input method editor (e.g. East Asian users).
+## DisableImeInNormal = false
 
 ## Draw borders on the GUI side instead of the vertical border and status line that nvim draws.
-DrawBorder = true
+DrawWindowSeparator = true
+WindowSeparatorTheme = "dark"
+# WindowSeparatorColor = "#2222ff"
+# WindowSeparatorGradient = false
 
 ## Draw built-in indent guide
-IndentGuide = false
+## Enabling this setting will have a slight impact on performance.
+# IndentGuide = false
+# IndentGuideIgnoreFtList = ["md"]
+
+## Animates the scrolling behavior of Neovim when the scroll command is entered.
+SmoothScroll = true
+## Disables horizontal scrolling for smooth scrolling with the touchpad.
+# DisableHorizontalScroll = true
 
 ## Draw border on a float window
-# DrawBorderForFloatWindow = false
+# DrawBorderForFloatWindow = true
 
 ## Draw shadow under a float window
 DrawShadowForFloatWindow = true
@@ -67,6 +93,8 @@ DrawShadowForFloatWindow = true
 ## This option works only if `ExtMessages` is enabled.
 DesktopNotifications = true
 
+# Display the effect when clicked
+ClickEffect = true
 
 # Pattern that fills the diff background
 # Change the background pattern used for diff display.
@@ -95,22 +123,31 @@ DiffAddPattern    = 1
 DiffDeletePattern = 1
 DiffChangePattern = 1
 
-# Display the effect when clicked
-ClickEffect = false
+## You can write a vimscript to be executed after goneovim starts,
+## for example to disable the vimscript that Goneovim has embedded internally.
+## GinitVim = '''
+##  let g:hoge = 'fuga'
+## '''
+# Ginitvim = ""
 
-[Palette]
+
+## The palette is used as an input UI for externalized command lines and the Fuzzy-Finder feature built into Goneovim.
+# [Palette]
 ## Specifies the proportion of the command line palette to the height of the entire window.
-AreaRatio = 0.5
+# AreaRatio = 0.5
 ## Specifies the number of items to be displayed in the command line palette.
-MaxNumberOfResultItems = 30
+# MaxNumberOfResultItems = 30
 ## Specifies the opacity of the command line palette.
-Transparent = 1.0
+# Transparent = 1.0
 
-[Message]
+
+## Configure externalized message UI.
+# [Message]
 ## Specifies the opacity of the message window.
-Transparent = 1.0
+# Transparent = 1.0
 
-## The statusline configuration below relates to the display of Goneovim's own external status lines.
+
+## The statusline configuration below relates to the display of Goenovim's own external status lines.
 ## If you want to use neovim's status line plugin, you should disable its display.
 [Statusline]
 ## Whether or not to display the external status line
@@ -132,76 +169,91 @@ Visible = false
 # Right = [ "message", "git", "filetype", "fileformat", "fileencoding", "curpos", "lint" ]
 
 
+### Configure externalized tabline UI.
 [Tabline]
-## Whether or not to display the external tabline
-Visible = true
+### Whether or not to display the external tabline
+Visible = false
+ShowIcon = false
 
+
+## Configure externalized popupmenu UI.
 [Popupmenu]
 ## neovim's popupmenu is made up of word, menu and info parts.
 ## Each of these parts will display the following information.
 ##   word:   the text that will be inserted, mandatory
 ##   menu:   extra text for the popup menu, displayed after "word"
 ##   info:   more information about the item, can be displayed in a preview window
-
 ## The following options specify whether to display a dedicated column in the popupmenu
 ## to display the long text displayed in the `info` part.
 ShowDetail = true
-
+ 
 ## total number to display item
-Total = 20
-
+# Total = 20
+ 
 ## width of `menu` column
-MenuWidth = 400
-
+# MenuWidth = 400
+ 
 ## width of `info` column
-InfoWidth = 1
-
+# InfoWidth = 1
+ 
 ## width of `detail` column
-DetailWidth = 250
+# DetailWidth = 250
+ 
+## Show digit number which can select item for popupmenu
+ShowDigit = true
 
-[Lint]
-## Specifies whether the external linter tooltip should be displayed or not.
-Visible = true
-
-[MiniMap]
-## To view the minimap, launch an additional nvim instance;
-## setting Disable to true will not launch this additional nvim instance
-## and will completely disable the minimap feature.
-#Disable = true
-
-## Specifies whether to show the minimap or not.
-#Visible = false
-
-## Specifies the width of the minimap.
-#Width = 120
 
 [ScrollBar]
 ## Specifies whether to show the external scrollbar or not.
 Visible = true
 
-[SideBar]
-## Specifies whether to show the external sidebar or not.
-Visible = false
 
-## Specify whether or not to draw a shadow under the sidebar.
-DropShadow = true
+# [MiniMap]
+# ## To view the minimap, launch an additional nvim instance;
+# ## setting Disable to true will not launch this additional nvim instance
+# ## and will completely disable the minimap feature.
+# Disable = false
+# 
+# ## Specifies whether to show the minimap or not.
+# Visible = true
+
+## Specifies the width of the minimap.
+# Width = 100
+
+
+## Configure the markdown preview feature
+# [Markdown]
+# Disable = false
+
+## Specifying code highlighting styles
+# CodeHlStyle = "github"
+
+
+# [SideBar]
+## Specifies whether to show the external sidebar or not.
+# Visible = false
 
 ## Specify the sidebar width
-Width = 200
+# Width = 200
+
+## Specify whether or not to draw a shadow under the sidebar.
+# DropShadow = false
 
 ## Specify the color to use when selecting items in the sidebar or palette in hexadecimal format
-AccentColor = "#5596ea"
+# AccentColor = "#5596ea"
 
-[Workspace]
+
+# [FileExplore]
+## Specify the maximum number of items to be displayed in the file explorer.
+# MaxDisplayItems = 30
+
+
+# [Workspace]
 ## This setting sets the format of the path string of CWD in the sidebar.
 ##  name: directoryname
 ##  full: /path/to/directoryname
 ##  minimum: /p/t/directoryname
-PathStyle = "minimum"
+# PathStyle = "minimum"
 
 ## Specifies whether the last exited session should be restored at the next startup.
-RestoreSession = false
-
-[FileExplore]
-## Specify the maximum number of items to be displayed in the file explorer.
-MaxDisplayItems = 30
+# RestoreSession = false
