--- a/desktop/.config/sway/config
+++ b/desktop/.config/sway/config
@@ -11,7 +11,7 @@ exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CU
 exec hash dbus-update-activation-environment 2>/dev/null && \
      dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
 
-font pango:JuliaMono 10
+font JuliaMono 10
 # Colors
 
 set $black #1C1B19
